# MiniJameGam39

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-mingw.cmake
assets/shaders/: heart_beat.fs  speed_effect.fs
assets/tilemap/: city.tsx  untitled.tmx  untitledzear.tmx
scripts/: build.sh  package-game.sh  win-build.sh
src/: main.cpp
src/Pathfinding/: pathfinding.cpp
src/core/: Animation.cpp  Animation.hpp  AudioManager.hpp  Camera.cpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameStats.cpp  GameStats.hpp  HUD.cpp  HUD.hpp
src/core/bonus/: BonusManager.cpp  BonusManager.hpp
src/gameover/: GameOver.cpp  GameOver.hpp
src/groupies/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/menu/: Menu.cpp  Menu.hpp
src/menu/button/: button.cpp  button.hpp
src/player/: Car.cpp  Car.hpp  Player.cpp  Player.hpp
src/scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneType.hpp
src/victory/: Victory.cpp  Victory.hpp
src/world/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
src/world/tilemap/: Tilemap.cpp  Tilemap.hpp
